src/scss/05_components/_components.pagination.scss
@use "../00_settings/settings.global";
@use "../01_tools/tools.breakpoints";

.lia-pagination {
  display: inline-block;
  width: 100%;

  @include tools.breakpoint("md") {
    margin-bottom: 2rem;
    width: auto;
  }
  @include tools.breakpoint("lg") {
    margin-bottom: 0;
    margin-right: 2rem;
    width: auto;
  }

  &__content {
    align-items: center;
    background: rgb(var(--color-highlight));
    color: white;
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: wrap;
    font-size: 1.8rem;
    font-weight: 700;
    justify-content: space-between;

    @include tools.breakpoint("md") {
      border-radius: settings.$global-radius;
      width: 15rem;
    }
  }

  &__current {
    margin: 0 1rem;
  }
}

